[package]
name = "mugunghwa"
version = "0.1.0"
edition = "2021"
authors = ["ln2r <scorch_62@live.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'd1'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.12.2"
once_cell = "1.21.3"
